<resources>
    <string name="app_name">MyBMI</string>
    <string name="title">BMI CALCULATION APPLICATION</string>
    <string name="bmi">BMI:</string>
    <string name="status1">Underweight</string>
    <string name="status2">Normal</string>
    <string name="status3">Overweight</string>
    <string name="hint_height">Enter Height (cm)</string>
    <string name="hint_weight">Enter Weight (kg)</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="error">Value Required</string>
    <string name="empty"></string>
</resources>